
cc_library(
	name = "math",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_format//:format",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_predef//:predef",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_atomic//:atomic",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_lambda//:lambda",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_tuple//:tuple"
	],
)
